--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <a href="./index.html" class="link-container">
       <div class="logo-container">
 
-        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <img src="assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
         <h1>Vinheiria Agnello</h1>
 
       </div>
       <nav>
-        
         <a href="./pages/categorias.html">Categorias</a>
         <a href="./pages/safras.html">Safras</a>
         <a href="./pages/sobre.html">Sobre Nós</a>
